apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.74
          imagePullPolicy: IfNotPresent
          ports:
            - name: dns-udp
              protocol: UDP
              containerPort: 53
              hostPort: 53
            - name: dns-tcp
              protocol: TCP
              containerPort: 53
              hostPort: 53
            - name: http-initial
              containerPort: 3000
            - name: http
              protocol: TCP
              containerPort: 80
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
          volumeMounts:
            - name: adguard-volume
              mountPath: /opt/adguardhome/work
              subPath: work
            - name: adguard-volume
              mountPath: /opt/adguardhome/conf
              subPath: conf
      volumes:
        - name: adguard-volume
          persistentVolumeClaim:
            claimName: adguard-pvc
